*refactoring API, preparing for DB

--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "uuid": "^7.0.3"
   },
   "devDependencies": {
+    "bootstrap": "^4.5.0",
+    "cors": "^2.8.5",
     "nodemon": "^2.0.3"
   }
 }
