--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
   "dependencies": {
     "child_process": "^1.0.2",
     "express": "^4.17.1",
+    "mongodb": "^3.5.9",
     "uuid": "^7.0.3"
   },
   "devDependencies": {
     "bootstrap": "^4.5.0",
     "cors": "^2.8.5",
-    "nodemon": "^2.0.3"
+    "nodemon": "^2.0.4"
   }
 }
